[gd_scene load_steps=14 format=2]

[ext_resource path="res://npc/NPC.gd" type="Script" id=1]
[ext_resource path="res://state_machines/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://state_machines/npc/unaffiliated/wander.gd" type="Script" id=3]
[ext_resource path="res://state_machines/npc/unaffiliated/FollowNugget.gd" type="Script" id=4]
[ext_resource path="res://state_machines/npc/unaffiliated/GoBrokenCart.gd" type="Script" id=5]
[ext_resource path="res://state_machines/npc/GoBase.gd" type="Script" id=6]
[ext_resource path="res://state_machines/npc/Work.gd" type="Script" id=7]
[ext_resource path="res://state_machines/npc/Unaffiliated.gd" type="Script" id=8]

[sub_resource type="StreamTexture" id=5]
load_path = "res://.import/VillageMan.png-91dbe2eb93c9df2552dc4cbced7a8f0b.stex"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 14.9293 )

[sub_resource type="CircleShape2D" id=4]
radius = 15.1969

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 80, 20 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 150, 10 )

[node name="NPC" type="KinematicBody2D" groups=[
"npc",
]]
z_index = -1
collision_layer = 64
collision_mask = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}
wander_timer = NodePath("WanderTimer")

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 5 )
hframes = 4
vframes = 4

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Unaffiliated" type="Node" parent="StateMachine" groups=[
"state_machine",
]]
script = ExtResource( 8 )

[node name="Wander" type="Node" parent="StateMachine/Unaffiliated" groups=[
"state_machine",
]]
script = ExtResource( 3 )

[node name="FollowNugget" type="Node" parent="StateMachine/Unaffiliated" groups=[
"state_machine",
]]
script = ExtResource( 4 )

[node name="GoBrokenCart" type="Node" parent="StateMachine/Unaffiliated" groups=[
"state_machine",
]]
script = ExtResource( 5 )

[node name="GoBase" type="Node" parent="StateMachine" groups=[
"state_machine",
]]
script = ExtResource( 6 )

[node name="Work" type="Node" parent="StateMachine" groups=[
"state_machine",
]]
script = ExtResource( 7 )

[node name="Areas" type="Node2D" parent="."]

[node name="NuggetPicker" type="Area2D" parent="Areas"]
visible = false
collision_layer = 0
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/NuggetPicker"]
shape = SubResource( 4 )

[node name="NuggetDetector" type="Area2D" parent="Areas"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/NuggetDetector"]
position = Vector2( 0, -8 )
shape = SubResource( 3 )

[node name="WanderArea" type="Area2D" parent="Areas"]
collision_layer = 0
collision_mask = 32

[node name="Collision" type="CollisionShape2D" parent="Areas/WanderArea"]
shape = SubResource( 6 )

[connection signal="area_entered" from="Areas/NuggetPicker" to="." method="_brokencart_area_entered"]
[connection signal="body_entered" from="Areas/NuggetPicker" to="." method="_on_NuggetPicker_body_entered"]
[connection signal="body_entered" from="Areas/NuggetDetector" to="." method="_on_NuggetDetector_body_entered"]
[connection signal="body_exited" from="Areas/NuggetDetector" to="." method="_on_NuggetDetector_body_exited"]
[connection signal="area_exited" from="Areas/WanderArea" to="." method="_on_WanderArea_exited"]
